--- a/src/app/global/device-list/device-list.component.html
+++ b/src/app/global/device-list/device-list.component.html
@@ -1,20 +1,19 @@
 <div class="container">
     <div class="">
 
-        <div class="row center-cust ">
+        <!-- <div class="row center-cust ">
             Locations To Set: [<div *ngFor="let location of (locationsToSet | async); let i = index"><a class="badge badge-pill badge-light">{{ location.name }} </a></div>]
-        </div>
+        </div> -->
         <div class="center-cust row">
 
             <div *ngFor="let device of (devices | async) | paginate: { itemsPerPage: 4, currentPage: p }; let i = index"
                 class="card user-card">
 
                 <div class="card-header">
-                        
-                    
-                    <h4>Location: 
+
+                    <h4>Location:
                         <select class="form-control" (change)="locationSelected($event)">
-                        <option disabled selected value> -- select an option -- </option>
+                        <option selected value> -- select an option -- </option>
                         <option [value]="location.name" *ngFor="let location of (locationsToSet | async); let i = index">{{location.name}}</option>
                       </select>
                     </h4>
@@ -22,8 +21,8 @@
                     <!-- <h7>Device ID: {{device.id}}</h7> -->
                 </div>
 
-                <div class="card-body"> 
-                    
+                <div class="card-body">
+
                 <div  *ngIf="mode !== 'createMode'"  class="form-group">
                     <div class="custom-control custom-switch">
                         <input (click)="enableQuery(i)" [disabled]="isQueryEnabled(i)" type="checkbox" class="custom-control-input"
@@ -56,7 +55,7 @@
                     </div>
                 </div>
 
-                
+
                 <div class="form-group">
                     <div class="custom-control custom-switch">
                         <input (click)="enableBomb(i)" [disabled]="isBombEnabled(i)" type="checkbox" class="custom-control-input"
