--- a/src/app/global/edit-game/edit-game.component.html
+++ b/src/app/global/edit-game/edit-game.component.html
@@ -17,17 +17,26 @@
       <th colspan="2">Add Multiple Teams:</th>
       <th width="150px"><button type="button" (click)="addTeam()" class="btn btn-primary">Add More</button></th>
     </tr>
-    <div >
+    <div style="max-width:80%" >
       <tr *ngFor="let team of gameModeForm.get('teams')['controls']; let i=index" [formGroupName]="i" >
         <td>
-            Name :{{i}} {{teams.controls[1].value.name}}{{team.value.name}}
+            Name :
             <input type="text" formControlName="name"  class="form-control">
         </td>
         <td>
             Color:
-            <input type="text" formControlName="color" class="form-control">
+            <br>
+            <select  [ngModel]="i" class="form-control" formControlName="color" [id]="'colorPicker'+i" (change)="changeColor($event)">
+              <option disabled selected value> -- select an option -- </option>
+              <option [style.background-color]="color.value" [value]="color.id" *ngFor="let color of colors">{{color.name}}</option>
+            </select>
+            <!-- <input formControlName="color"[style.background]="color"
+       [cpPresetColors]="['#fff', '#000', '#2889e9', '#e920e9', '#fff500', 'rgb(236,64,64)']"
+       [(colorPicker)]="color" [value]="color"/> -->
+      
+            <!-- <input type="text" formControlName="color" class="form-control"> -->
         </td>
-        <td>
+        <td *ngIf="i > 1">
             <button (click)="removeTeam(i)" class="btn btn-danger">Remove</button>
         </td>
       </tr>
