--- a/src/app/global/device-list/device-list.component.html
+++ b/src/app/global/device-list/device-list.component.html
@@ -6,13 +6,13 @@
                     class="badge badge-pill badge-light">{{ location.name }} </a></div>]
         </div>
         <div class="row center-cust ">
-            Teams Avaliable To Set: [<div *ngFor="let team of (teamsAvaliable | async); let x = index"><a
+            Teams Avaliable To Set: [<div *ngFor="let team of teamsAvaliable ; let x = index"><a
                     class="badge badge-pill badge-light">{{ team.name }} </a></div>]
         </div>
         Warning: you looses the changes if you dont save them!
         <div class="center-cust row">
 
-            <div *ngFor="let device of (devices | async) | paginate: { itemsPerPage: 4, currentPage: p }; let i = index"
+            <div *ngFor="let device of devices | paginate: { itemsPerPage: 4, currentPage: p }; let i = index"
                 class="card user-card">
 
                 <div class="card-header">
@@ -54,7 +54,7 @@
                                     <select class="form-control" (change)="locationSelected($event)">
                                         <option selected value> -- select an option -- </option>
                                         <option [value]="team.name"
-                                            *ngFor="let team of ( teamsAvaliable | async); let i = index">{{team.name}}
+                                            *ngFor="let team of teamsAvaliable; let i = index">{{team.name}}
                                         </option>
                                     </select>
                                 </div>
@@ -80,7 +80,7 @@
                                             <select class="form-control" (change)="locationSelected($event)">
                                                 <option selected value> -- select an option -- </option>
                                                 <option [value]="team.name"
-                                                    *ngFor="let team of ( teamsAvaliable | async); let i = index">
+                                                    *ngFor="let team of teamsAvaliable; let i = index">
                                                     {{team.name}}</option>
                                             </select>
                                         </div>
