--- a/src/app/global/device-list/device-list.component.html
+++ b/src/app/global/device-list/device-list.component.html
@@ -71,7 +71,8 @@
                                                 <div class="form-group">
                                                     <label for="armTime">Team</label>
                                                     <select class="form-control"
-                                                    (change)="medicNodeTeamSelected($event,i)" >
+                                                    (change)="medicNodeTeamSelected($event,i)"
+                                                    [(ngModel)]="devices[i].medic.team" >
                                                         <option value="none" selected disabled hidden>Select Team</option>
                                                         <option [value]="team.name" 
                                                             *ngFor="let team of teamsAvaliable; let i = index">
