--- a/src/app/global/gamelist/gamelist.component.html
+++ b/src/app/global/gamelist/gamelist.component.html
@@ -10,7 +10,7 @@
     <tbody>
       <tr *ngFor="let p of gamemodes">
         <td>{{ p.name }}</td>
-        <td>{{ p.teams }}</td>
+        <td>{{ p.teams.length }}</td>
         <!-- <td>{{ p.nodeModes }}</td> -->
         <td>{{ p.map }}</td>
         <td><button class="btn btn-sm btn-default btn-primary" (click)="editMode.emit(p)">Edit</button></td>
